# effective_pandas

./: .gitignore  README.md  lesson_2_dataTypes.py  lesson_3-1_series.py  lesson_3-2_series.py  lesson_3-3_series.py  lesson_3-4_series.py  lesson_3-5_series.py  lesson_3-6_series.py  lesson_3-7_series.py  lesson_3-8_series.py  lesson_3-9_series.py  lesson_4_1-DataFrames.py  lesson_4_2-DataFrames.py  lesson_4_2-DataFrames_exercises_alternative_by_claude.py  lesson_4_3-DataFrames.py  lesson_4_4-DataFrames.py  lesson_4_5-DataFrames.py  lesson_4_6-DataFrames(final_cleaned_code).py  lesson_4_6-DataFrames(learning_code).py  lesson_4_7-DataFrames.py  lesson_4_8-DataFrames.py  lesson_4_9-DataFrames.py  lesson_5_0-DataFrames.py  lesson_5_1-DataFrames.py  lesson_5_2-DataFrames.py  pyproject.toml  series_intro.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
